--- a/public/index-raw.html
+++ b/public/index-raw.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="mr">
 
 <head>
-  <title>Valio Con 2025</title>
+  <title>दीपस्तंभ पुरस्कार सोहळा २०२५ | मराठा समाज प्रतिष्ठान</title>
   <meta charset="utf-8" />
-  <link href="css/2025.css%3F10.css" rel="stylesheet" type="text/css" />
-  <link rel="SHORTCUT ICON" href="2014/images/favicon.ico" />
+  <link href="/css/2025.css" rel="stylesheet" type="text/css" />
+  <link rel="SHORTCUT ICON" href="/images/logo.png" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" />
 
-  <meta property="og:title" content="Valio Con 2025" />
-  <meta property="og:description" content="A creative tech conference. September 11th-14th in Oceanside, California." />
+  <meta property="og:title" content="दीपस्तंभ पुरस्कार सोहळा २०२५" />
+  <meta property="og:description" content="मराठा समाज प्रतिष्ठान, छत्रपती संभाजीनगर यांचा दीपस्तंभ पुरस्कार सोहळा २०२५. १५ नोव्हेंबर २०२५ रोजी एम. आय. टी. प्रांगण, छत्रपती संभाजीनगर येथे." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://valiocon.com" />
-  <meta property="og:image" content="https://valiocon.com/images/vcon-share-2025.jpg" />
+  <meta property="og:url" content="https://deepstambh.com" />
+  <meta property="og:image" content="/images/logo.png" />
 
   <script>
     (function (w, d, e, u, f, l, n) {
@@ -36,13 +36,13 @@
     );
     ml("account", "1671155");
   </script>
-  <script src="js/index.js%3F4"></script>
+  <script src="/js/index.js"></script>
 </head>
 
 <body>
   <div id="header-bg"></div>
   <header id="header" class="at-top">
-    <img src="/images/logo.png" alt="Valio Con 2025" class="logo" />
+    <img src="/images/logo.png" alt="दीपस्तंभ पुरस्कार सोहळा २०२५" class="logo" />
 
   </header>
 
